    TODO: Look at FTaskStream.h
    TODO: Use pseudo-pttys for line buffered output: http://stackoverflow.com/questions/12586555/controlling-an-interactive-command-line-utility-from-a-cocoa-app-trouble-with  --- Look at PseudoTTY class
    TODO: Use NSDictionaryController and bindings for all controls in main window and sub-controllers
    TODO: File watching still broken for script path

    http://stackoverflow.com/questions/13355363/nstask-requires-flush-when-reading-from-a-process-stdout-terminal-does-not
    http://stackoverflow.com/questions/1276029/non-blocking-stdio

    TODO: Refactor status menu item menu generation from output to share code between ScriptExec and Platypus.app
    TODO: Drag and drop from icon view should be file based, not TIFF pasteboard data
    TODO: Add WebView example listing dropped files
    TODO: Make clearAllFields stuff use default spec

    * Various minor UI improvements (button status in args & drop settings window)
    * Now treating drop into STPathTextField like any other drop on window
    * Editable type lists in drop settings are now click-editable like those in Args controller
    * Output string "----\n" in Status Menu mode now creates menu separator item
    * Uniform Type Identifiers and Application Bundle Identifiers are now validated
    * New template processing option for Status Item icon
    * Build script now generates sparkle hash
    * More robust command line tool version checking
    * Fixed issue where showing the Preferences window lagged due to icon fetching on main thread
    * Args button title now shows the number of custom arguments that have been set
    * UTIs are now the default in Drop Settings (public.item and public.folder)
    * Move project over to ARC

For 5.0
    * Long GNU named params for command line tool, e.g. --some-option
    * Fixed issue where ScriptExec quit before script output was parsed
    * Add new examples Icns2Iconset, ImageResizer