@@ -16,6 +16,7 @@ For 5.1
     TODO: Use pseudo-pttys for line buffered output: http://stackoverflow.com/questions/12586555/controlling-an-interactive-command-line-utility-from-a-cocoa-app-trouble-with  --- Look at PseudoTTY class
     TODO: Use NSDictionaryController and bindings for all controls in main window and sub-controllers
     TODO: File watching still broken for script path
+    TODO: Documentation should be updated about what Use Icon as Template does
 
     http://stackoverflow.com/questions/13355363/nstask-requires-flush-when-reading-from-a-process-stdout-terminal-does-not
     http://stackoverflow.com/questions/1276029/non-blocking-stdio
